--- a/templates/mapped.html
+++ b/templates/mapped.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>Mapped Streaming</h1>
-    <img src="{{ url_for('video_feed') }}">
+    <img src="{{ url_for('video_feed_mapped') }}">
   </body>
 </html>
