--- a/static/styles/demostyle.css
+++ b/static/styles/demostyle.css
@@ -132,6 +132,8 @@ padding: 0;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     text-align: center;
+    opacity: 0.8;
+    padding: 5%;
 }
 
 hr.line {
