--- a/templates/demo.html
+++ b/templates/demo.html
@@ -10,16 +10,21 @@
 
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a>Add</a>
+  <h2>Add</h2>
   <ul>
-    <li class="list"><a href="participant.html" target="_blank">Participant</a></li>
-    <li class="list"><a href="stimulus.html" target="_blank">Stimulus</a></li>
-    <li class="list"><a href="experiment.html" target="_blank">Experiment</a></li>
-    <li class="list"><a href="transformed1.html" target="_blank">Transformed</a></li>
+    <li><a href="participant.html" target="_blank">Participant</a></li>
+    <li><a href="stimulus.html" target="_blank">Stimulus</a></li>
+    <li><a href="experiment.html" target="_blank">Experiment</a></li>
+  </ul>
+  <h2>Effects</h2>
+  <ul>
+    <li><a href="transformed1.html" target="_blank">Simple Transformed</a></li>
+    <li><a href="torch.html" target="_blank">Accumulative Torchlight Effect</a></li>
   </ul>
   <a href="#">Dashboard</a>
   <a href="#">Help</a>
 </div>
+
 
 <div id="main">
     <div class="topnav">
