link to transformed added to demo html

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -18,7 +18,7 @@
   </ul>
   <h2>Effects</h2>
   <ul>
-    <li><a href="transformed1.html" target="_blank">Simple Transformed</a></li>
+    <li><a href="transformed.html" target="_blank">Simple Transformed</a></li>
     <li><a href="torch.html" target="_blank">Accumulative Torchlight Effect</a></li>
   </ul>
   <a href="#">Dashboard</a>
