torch effect is added

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -19,7 +19,7 @@
   <h2>Effects</h2>
   <ul>
     <li><a href="transformed.html" target="_blank">Simple Transformed</a></li>
-    <li><a href="torch.html" target="_blank">Accumulative Torchlight Effect</a></li>
+    <li><a href="torch_new.html" target="_blank">Accumulative Torchlight Effect</a></li>
   </ul>
   <a href="#">Dashboard</a>
   <a href="#">Help</a>
