fix some bugs on html pages

--- a/templates/artworks/artworks.html
+++ b/templates/artworks/artworks.html
@@ -7,6 +7,14 @@
         </div>
     </div>
     <hr>
+
+    <style>
+        img {
+            max-width: 250px;
+            height: auto;
+        }
+    </style>
+
     <div class="row">
         <div class="col-sm-12">
             <table class="table table-striped">
