--- a/templates/artworks/base.html
+++ b/templates/artworks/base.html
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href=" # ">Flask Server</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">Livegaze</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
