--- a/templates/transformed.html
+++ b/templates/transformed.html
@@ -8,11 +8,9 @@
 <body>
 
   <div class="split left">
-    {%for camera_id in range(0, camera_ids)%}
     <div class="container">
-      <img src="{{ url_for('mapped_gaze_feed', camera_id='{}'.format(camera_id), artwork_id='{}'.format(artwork_id))}}" alt="Mapped View" class="image-world" width="30px" height="15px">
+      <img src="{{ url_for('mapped_gaze_feed', artwork_id='{}'.format(artwork_id))}}" alt="Mapped View" class="image-world" width="30px" height="15px">
     </div> 
-    {%endfor%}
   </div>
 </body>
 </html>
