--- a/templates/demo.html
+++ b/templates/demo.html
@@ -26,6 +26,10 @@
         <li><a href="{{ url_for("transformed", artwork_id='{}'.format(0)) }}" target="_blank">Simple Transformed</a></li>
         <li><a href="{{ url_for("torch_new" , artwork_id='{}'.format(0)) }}" target="_blank">Accumulative Torchlight Effect</a></li>
     </ul>
+    <h2>Test</h2>
+    <ul>
+        <li><a href="{{ url_for("tag_test_feed", artwork_id='{}'.format(0)) }}" target="_blank">Tag Test</a></li>
+    </ul>
     <a href="#">Dashboard</a>
     <a href="#">Help</a>
 </div>
