--- a/templates/tag_test.html
+++ b/templates/tag_test.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/demostyle.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/demostyle.css') }}">
 </head>
 
 <body>
 
-  <div class="split left">
-    <div class="container">
-      <img src="{{ url_for('tag_test_feed', artwork_id='{}'.format(artwork_id))}}" alt="Mapped View" class="image-world" width="30px" height="15px">
-    </div> 
-  </div>
+
+<div class="container">
+    <img src="{{ url_for('tag_test_feed', artwork_id='{}'.format(artwork_id)) }}" alt="Mapped View" class="image-world"
+         width="30px" height="15px">
+</div>
+
+<script>
+    // Send screen resolution to server
+    window.onload = function () {
+        var screenWidth = window.screen.width;
+        var screenHeight = window.screen.height;
+
+        console.log(screenHeight)
+        var xhr = new XMLHttpRequest();
+        xhr.open("POST", "/screen_resolution", true);
+        xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+        xhr.send(JSON.stringify({"width": screenWidth, "height": screenHeight}));
+    };
+</script>
+
 </body>
 </html>
