--- a/templates/transformed.html
+++ b/templates/transformed.html
@@ -8,7 +8,8 @@
 <body>
 
     <div class="container">
-      <img src="{{ url_for('mapped_gaze_feed', artwork_id='{}'.format(artwork_id))}}" alt="Mapped View" class="image-world" width="30px" height="15px">
+{#      <img src="{{ url_for('mapped_gaze_feed', artwork_id='{}'.format(artwork_id))}}" alt="Mapped View" class="image-world" width="30px" height="15px">#}
+        <img id="artworkImg" alt="Image">
     </div>
 
     <script>
@@ -16,6 +17,9 @@
         window.onload = function () {
             var screenWidth = window.innerWidth;
             var screenHeight = window.innerHeight;
+
+            var img = document.getElementById('artworkImg');
+            img.src = '../artworks/simple/{{ artwork_id }}/'+ screenWidth +'/' + screenHeight
 
             console.log(screenHeight)
             var xhr = new XMLHttpRequest();
