--- a/templates/simple_artwork.html
+++ b/templates/simple_artwork.html
@@ -2,11 +2,91 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>artworkTest</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/aruco/cv.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/aruco/aruco.js') }}"></script>
+
+    <style>
+        body {
+            margin:0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100vw;
+            height: 100vh;
+            background-color: #000;
+        }
+
+        .tag {
+            position: fixed;
+            width: 10vw;
+            height: 10vw;
+        }
+
+        .upper-left {
+            top: 0;
+            left: 0;
+        }
+
+        .upper-right {
+            top: 0;
+            right: 0;
+        }
+
+        .lower-left {
+            bottom: 0;
+            left: 0;
+        }
+
+        .lower-right {
+            bottom: 0;
+            right: 0;
+        }
+
+        .background {
+            display: block;
+            max-width: 100vw;
+            max-height: 100vh;
+            object-fit: contain; /* Scale image to fit without cropping or distortion */
+        }
+    </style>
 </head>
 <body>
-<p id="status">OpenCV.js is loading...</p>
+
+<div id="arucoTag0" class="tag upper-left">
+</div>
+<div id="arucoTag1" class="tag upper-right"></div>
+<div id="arucoTag2" class="tag lower-left"></div>
+<div id="arucoTag3" class="tag lower-right"></div>
+<div id="bg" class="background">
+    <img id="bgImage"  class="background" alt="backgroundImage">
+</div>
+
 <script async src="{{ url_for('static', filename='js/openCV.js') }}"></script>
 <script src="{{ url_for('static', filename='js/simpleCanvasHandler.js') }}"></script>
+<script>
+    var dictionary = new AR.Dictionary("ARUCO");
+    var maxInput = dictionary.codeList.length - 1;
+    var arucoTag0 = document.getElementById("arucoTag0");
+    var arucoTag1 = document.getElementById("arucoTag1");
+    var arucoTag2 = document.getElementById("arucoTag2");
+    var arucoTag3 = document.getElementById("arucoTag3");
+    var arucoId = 0
+    {#var arucoId = {{ aruco_id }}#}
+
+    $(document).ready(function () {
+        arucoTag0.innerHTML = dictionary.generateSVG(arucoId);
+        arucoTag1.innerHTML = dictionary.generateSVG(arucoId + 1);
+        arucoTag2.innerHTML = dictionary.generateSVG(arucoId + 2);
+        arucoTag3.innerHTML = dictionary.generateSVG(arucoId + 3);
+    })
+
+    var bgImage = document.getElementById("bgImage");
+    bgImage.src = "../static/artworks/Martyrdom.png";
+
+
+</script>
 </body>
 </html>
