--- a/templates/transformed.html
+++ b/templates/transformed.html
@@ -22,7 +22,7 @@
             var img = document.getElementById('artworkImg');
             img.style.height = window.innerHeight + 'px';
             img.style.width = window.innerWidth + 'px';
-            img.src = '../artworks/simple/{{ artwork_id }}/'+ screenWidth +'/' + screenHeight
+            img.src = '../../artworks/{{mode}}/{{ artwork_id }}/'+ screenWidth +'/' + screenHeight
         };
     </script>
 </body>
