--- a/templates/simple_artwork.html
+++ b/templates/simple_artwork.html
@@ -5,19 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>artworkTest</title>
     <script>
-        {#const arucoId = {{ aruco_id }}#}
-        const arucoId = 3
-
+        const arucoId = {{ aruco_id }}
         const boardId = {{ board_id }}
-        {#const boardId = 0;#}
-        {#const selectedMarkerId = {{ selected_label_id }};#}
-        const selectedMarkerId = 0;
+        const selectedMarkerId = {{ selected_label_id }};
+        const pointerSize = {{ pointer_size }};
     </script>
     <script src="{{ url_for('static', filename='js/openCV.js') }}"></script>
     <script src="{{ url_for('static', filename='js/simpleCanvasHandler.js') }}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.socket.io/4.8.1/socket.io.min.js" integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/marker_manager.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/aruco/cv.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/aruco/aruco.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/tag_place.js') }}"></script>
@@ -37,6 +33,7 @@
             position: fixed;
             width: 10vw;
             height: 10vw;
+            z-index: 9999;
         }
 
         .upper-left {
@@ -66,11 +63,20 @@
             object-fit: contain; /* Scale image to fit without cropping or distortion */
         }
 
+        .marker_parent {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 100;
+        }
+
         .marker {
             display: block;
             max-width: 100vw;
             max-height: 100vh;
         }
+        
     </style>
 </head>
 <body>
@@ -83,7 +89,7 @@
 <div id="bg">
     <img id="bgImage"  class="background" alt="backgroundImage" src="../../{{ artwork_url }}">
 </div>
-<div id="markerParent" class="background">
+<div id="markerParent" class="marker_parent">
 
 </div>
 </body>
